log/build_2023-10-22_17-32-39/joystick_sub/stderr.log
  File "/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/joystick_sub.py", line 97
    else if control_matrix_data[i] < -1:
         ^
SyntaxError: invalid syntax

